Add packing list page
Co-authored-by: Eva Kemp <eva.j.kemp@gmail.com>
Co-authored-by: Alejandra El-Dasouki <alejagr1998@gmail.com>

--- a/PackerTracker/Views/Home/Show.cshtml
+++ b/PackerTracker/Views/Home/Show.cshtml
@@ -10,12 +10,7 @@
 </head>
 
 <body>
-    <h1>Packer Tracker</h1>
-    <form action="/NewList" method="post">
-        <label for="listTitle">Add a new packing list</label>
-        <input id="listTitle" name="listTitle" type="text">
-        <button type="submit">Submit</button>
-    </form>
+    <h1>@Model.Name</h1>
 </body>
 
 </html>
