--- a/PackerTracker/Views/Home/Index.cshtml
+++ b/PackerTracker/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <title>Packer Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="~/css/styles.css">
     <meta charset='utf-8'>
 </head>
 
@@ -15,9 +15,12 @@
     <ul>
         @foreach (string name in PackList.Lists.Keys)
         {
-            <li>@name</li>
+            <li><a href="/@name">@name</a></li>
         }
     </ul>
+    <form action="/NewList" method="get">
+        <button>Create a new list</button>
+    </form>
 </body>
 
 </html>
