Add list items to show packing list page
Co-authored-by: Eva Kemp <eva.j.kemp@gmail.com>
Co-authored-by: Jase Grable <jase.grable@gmail.com>

--- a/PackerTracker/Views/Home/Index.cshtml
+++ b/PackerTracker/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <ul>
         @foreach (string name in PackList.Lists.Keys)
         {
-            <li><a href="/@name">@name</a></li>
+            <li><a href="/List/@name">@name</a></li>
         }
     </ul>
     <form action="/NewList" method="get">
