--- a/PackerTracker/wwwroot/css/styles.css
+++ b/PackerTracker/wwwroot/css/styles.css
@@ -6,3 +6,17 @@ body {
 ul {
     display: inline-block;
 }
+
+div {
+    margin: 10px;
+    padding: 3px;
+    width: 50vw;
+    background-color: azure;
+    border-radius: 10px;
+}
+
+span {
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid black;
+}
